fix spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
 }
 .error-message {
   color: white;
-  margin-top: -100px;
+  margin-top: -50px;
   margin-left: 90px;
   z-index: 50;
 }
